# usssa-leaderboard

./: .gitignore
backend/: README.md  pyproject.toml
backend/data/: example_leaderboard_post.json
backend/src/usssa_leaderboard/: auth.py  config.py  db.py  main.py  schema.py
frontend/usssa-leaderboard-app/: .env  README.md  package-lock.json  package.json
frontend/usssa-leaderboard-app/src/: App.vue  main.js
frontend/usssa-leaderboard-app/src/assets/: country_names.json
frontend/usssa-leaderboard-app/src/components/: AdminFormCategoryUpdate.vue  AdminFormContingentUpdate.vue  AdminFormCreateEvent.vue  AdminFormCreateEventCategory.vue  AdminNavigationEditEvents.vue  AdminUpdateForm.vue  CategorySelector.vue  LeaderBoardList.vue  LeaderBoardTable.vue  LeaderboardTableRow.vue  TheCategoryUpdateForm.vue  TheContingentUpdateForm.vue
frontend/usssa-leaderboard-app/src/helpers/: axiosHelper.js
frontend/usssa-leaderboard-app/src/router/: index.js
frontend/usssa-leaderboard-app/src/stores/: auth.store.js  index.js  leaderboards.store.js
frontend/usssa-leaderboard-app/src/views/: AdminEventView.vue  AdminRootView.vue  AdminView.vue  HomeView.vue  LeaderBoardView.vue  LoginView.vue  RootView.vue.vue
